# assetcanon

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: cdn_ranges.txt
docs/: benchmarks.md
scripts/: refresh-cdn-ranges.sh
src/: cdn.rs  classify.rs  cli.rs  dedupe.rs  dns.rs  extract.rs  lib.rs  main.rs  model.rs  normalize.rs  psl.rs  scope.rs
tests/: cli_smoke.rs
